tests/invalid/test_062.wyal
define subsequence(int[] xs, int[] ys) is:
   |xs| < |ys|
   forall (int i):
     if:
        i >= 0
        i < |xs|
     then:
        xs[i] == ys[i]

assert:
  forall(int[] xs, int[] ys):
       subsequence(xs,ys) ==> (|ys| > 1)